[package]
name = "dst-server-management"
version = "0.1.0"
edition = "2021"
author = "tvp100"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-web = "4"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
env_logger = "0.11"
log = "0.4"
zip = "0.6"
fs_extra = "1.3.0"

